syntax = "proto3";

package budget;

// import "../../../common/src/conf/common_ui.proto";

option java_package = "com.digitald4.budget.proto";
option java_outer_classname = "BudgetUIProtos";

enum UserRoleUI {
  UR_UNKNOWN = 0;
	UR_OWNER = 12;
  UR_CAN_EDIT = 2;
	UR_READONLY = 3;
}

message BudgetListRequest {
	int64 portfolio_id = 1;
}

message BalanceListRequest {
  int64 portfolio_id = 1;
  int32 year = 2;
  int32 month = 3;
}

message BalanceListResponse {
  message Balance {
    double balance = 1;
    double balance_y_t_d = 2;
  }
  message ByAccount {
    map<int64, Balance> balance = 1;
  }
  map<int32, ByAccount> byMonth = 1;
}

message BalanceGetRequest {
  int64 account_id = 1;
  int32 year = 2;
  int32 month = 3;
}

message BillListRequest {
	int64 portfolio_id = 1;
  int32 year = 2;
  int32 month = 3;
}

message TemplateBillListRequest {
  int64 template_id = 1;
}

message ApplyTemplateRequest {
	int64 template_id = 1;
  int32 year = 2;
  int32 month = 3;
}
